<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/card1login"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/fullnamesignup"
                    android:drawableEnd="@drawable/ic_action"
                    android:padding="10dp"
                    android:inputType="textPersonName"
                    android:hint="@string/txtnama"
                    android:autofillHints="@string/txtnama"
                    android:background="@color/colorWhite"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/fullnamesignup"
                    android:id="@+id/dividersignup1"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawableEnd="@drawable/ic_pengguna"
                    android:layout_below="@+id/dividersignup1"
                    android:id="@+id/usernamelogin"
                    android:padding="10dp"
                    android:inputType="text"
                    android:hint="@string/txtnis"
                    android:autofillHints="@string/txtnis"
                    android:background="#fff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/usernamelogin"
                    android:id="@+id/dividerlogin"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dividerlogin"
                    android:background="@color/colorWhite"
                    android:id="@+id/passwordsignup"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/txtpassword"
                    android:autofillHints="@string/txtpassword"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_lock2"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/passwordsignup"
                    android:id="@+id/dividersignup2"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dividersignup2"
                    android:background="#fff"
                    android:inputType="textPassword"
                    android:id="@+id/konfpasswordsingup"
                    android:drawableEnd="@drawable/ic_lock"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/txtkonfpassword"
                    android:autofillHints="@string/txtkonfpassword"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/konfpasswordsingup"
                    android:id="@+id/dividersignup3"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/dividersignup3"
                    android:weightSum="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:inputType="textEmailAddress"
                        android:id="@+id/emailsignup"
                        android:layout_marginStart="10dp"
                        android:hint="@string/txtemail"
                        android:autofillHints="@string/txtemail"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:layout_marginEnd="2dp"
                        android:drawableEnd="@drawable/email"
                        />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card1login"
            android:layout_marginRight="20dp"
            android:id="@+id/card2login"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerlogin"
                    android:autofillHints="@string/txtnama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">
                </androidx.appcompat.widget.AppCompatSpinner>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/spinnerlogin"
                    android:id="@+id/dividertgl"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/lay1"
                    android:layout_below="@id/dividertgl">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/tgllahir"
                        />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/button_date"
                            android:layout_marginTop="10dp"
                            android:text="@string/tanggal"
                            android:onClick="showDatePickerDialog"
                            />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/button_time"
                            android:layout_marginTop="10dp"
                            android:layout_alignBottom="@id/button_date"
                            android:layout_toEndOf="@id/button_date"
                            android:text="@string/time"
                            android:onClick="showTimePickerDialog"
                            />
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/card2login"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorBrown"
            android:text="Sign Up"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login disini!"
            android:id="@+id/toLogin"
            android:layout_below="@+id/btnSignup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_login"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>