<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recyclerActivity">
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleGravity="top"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/maiaActivityToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_collapseMode="pin">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/daftar_menu"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/ic_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ic_share"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_favorite_black_24dp"
            android:backgroundTint="@color/colorWhite"
            android:tint="@color/colorWhite"
            android:layout_marginRight="20dp"

            />
        <ImageView
            android:id="@+id/ic_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_share_black_24dp"
            android:backgroundTint="@color/colorWhite"
            android:tint="@color/colorWhite"
            android:layout_marginRight="20dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:clipToPadding="false"
        android:foregroundGravity="center"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head_layout">

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/titleCategroies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        android:text="@string/kategori"
        android:textSize="@dimen/text_size"
        android:paddingTop="10dp"
        android:textColor="@color/colorMaroon"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCategroies"
        app:layout_constraintBottom_toTopOf="@id/bottomTitle"
        android:layout_margin="10dp"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/bottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/pesan_makanan"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@color/colorRediss"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
